FIX - usermanagement page scroll overflow

--- a/user_management_frontend/src/pages/UserManagement.css
+++ b/user_management_frontend/src/pages/UserManagement.css
@@ -6,6 +6,8 @@
 }
 
 .usermanagementbg {
+    display: flex;
+    flex-direction: column;
     position: relative;
     z-index: 2;
     background-color: black;
